--- a/views/components/_navbar.pug
+++ b/views/components/_navbar.pug
@@ -2,6 +2,9 @@ nav.navbar.navbar-expand-lg.navbar-dark.bg-dark
   .container
     a.navbar-brand(href='#')
       img(src="../../assets/images/logo.png")
+    a.navbar-cart(href="#")
+      i.fas.fa-shopping-cart
+      span.badge.badge-light 1
     button.navbar-toggler(type='button', data-toggle='collapse', data-target='#navbarSupportedContent', aria-controls='navbarSupportedContent', aria-expanded='false', aria-label='Toggle navigation')
       span.navbar-toggler-icon
     #navbarSupportedContent.collapse.navbar-collapse
