--- a/views/libs/_data.pug
+++ b/views/libs/_data.pug
@@ -14,7 +14,7 @@ block data
           name: "Danh sách ưa thích"
         },
         {
-          name: "Giỏ hàng"
+          name: "Giỏ hàng (1)"
         },
         {
           name: "Đăng nhập"
