--- a/assets/styles/_themes/_components/_footer.scss
+++ b/assets/styles/_themes/_components/_footer.scss
@@ -54,7 +54,7 @@
       background: $footer-form-btn;
       border: 0;
       color: $white;
-      margin: 2px 0 0 -56px;
+      margin: 0 0 0 -56px;
       font-size: 13px;
       position: relative;
 
