--- a/assets/styles/_themes/_components/_navbar.scss
+++ b/assets/styles/_themes/_components/_navbar.scss
@@ -110,3 +110,31 @@
     }
   }
 }
+
+.navbar-cart {
+  display: block;
+  position: relative;
+  margin-left: -20px;
+
+  @include hover {
+    i, .badge {
+      color: $primary;
+    }
+  }
+
+  @include media-breakpoint-up(lg) {
+    display: none;
+  }
+
+  .badge {
+    font-size: $font-size-16px;
+    position: absolute;
+    top: -10px;
+    right: -10px;
+  }
+
+  i {
+    color: $white;
+    font-size: $font-size-25px;
+  }
+}
